--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@ bin-release/
 [Oo]bj/
 [Bb]in/
 
+#dependencies
+node_modules/
+
 # Other files and folders
 .settings/
 
@@ -16,3 +19,4 @@ bin-release/
 # Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
 # should NOT be excluded as they contain compiler settings and other important
 # information for Eclipse / Flash Builder.
+.DS_Store
